--- a/src/components/css/tabLayout.css
+++ b/src/components/css/tabLayout.css
@@ -18,7 +18,7 @@
   font-weight: bold;
   cursor: pointer;
   color: white;
-  background-color: #1e6c43;
+  background-color: #003f7f;
 }
 
 .tab-button.active {
@@ -58,7 +58,7 @@
 }
 
 .location-button {
-  background-color: #006b3c;
+  background-color:#003f7f;
   color: white;
   border: none;
   padding: 12px 24px;
@@ -69,7 +69,7 @@
 }
 
 .location-button:hover {
-  background-color: #004f2a;
+  background-color:#003f7f;
 }
 
 @media (max-width: 768px) {
