--- a/src/home.css
+++ b/src/home.css
@@ -281,7 +281,7 @@
   
 }
 
-.pricing-card h3 {
+.pricing-card  {
   font-size: 24px;
   font-weight: 700;
   color: #000;
@@ -479,12 +479,12 @@
 }
 
 .map-container {
-  width: 90%;
-  max-width: 900px;
-  height: 240px;
+  width: 80%;
+  max-width: 800px;
+  height: 180px;
   margin: 0 auto;
   overflow: hidden;
-  border-radius: 0 60px 0 60px;
+  border-radius: 0 px 0 px;
 }
 
 .footer-container {
